--- a/requirements.txt
+++ b/requirements.txt
@@ -1,89 +1,22 @@
-aiohttp==3.8.1
-aiosignal==1.2.0
-anyio==3.5.0
-argon2-cffi==21.3.0
-argon2-cffi-bindings==21.2.0
-asttokens==2.0.5
-async-timeout==4.0.2
-attrs==21.4.0
-autobahn==22.1.1
-backcall==0.2.0
-black==22.1.0
-bleach==4.1.0
-cffi==1.15.0
-charset-normalizer==2.0.11
-click==8.0.3
-cryptography==36.0.1
-debugpy==1.5.1
-decorator==5.1.1
-defusedxml==0.7.1
-entrypoints==0.4
-executing==0.8.2
-frozenlist==1.3.0
-hyperlink==21.0.0
-idna==3.3
-importlib-resources==5.4.0
-ipykernel==6.8.0
-ipython==8.0.1
-ipython-genutils==0.2.0
-ipywidgets==7.6.5
-jedi==0.18.1
-Jinja2==3.0.3
-jsonschema==4.4.0
-jupyter==1.0.0
-jupyter-client==7.1.2
-jupyter-console==6.4.0
-jupyter-core==4.9.1
-jupyter-server==1.13.4
-jupyter-server-proxy==3.2.1
-jupyterlab-pygments==0.1.2
-jupyterlab-widgets==1.0.2
-MarkupSafe==2.0.1
-matplotlib-inline==0.1.3
-mistune==0.8.4
-multidict==6.0.2
-mypy-extensions==0.4.3
-nbclient==0.5.10
-nbconvert==6.4.1
-nbformat==5.1.3
-nest-asyncio==1.5.4
-notebook==6.4.8
-numpy==1.22.1
-packaging==21.3
-pandocfilters==1.5.0
-parso==0.8.3
-pathspec==0.9.0
-pexpect==4.8.0
-pickleshare==0.7.5
-platformdirs==2.4.1
-prometheus-client==0.13.1
-prompt-toolkit==3.0.26
-ptyprocess==0.7.0
-pure-eval==0.2.2
-pycparser==2.21
-Pygments==2.11.2
-pyparsing==3.0.7
-pyrsistent==0.18.1
-python-dateutil==2.8.2
-pyzmq==22.3.0
-qtconsole==5.2.2
-QtPy==2.0.1
-Send2Trash==1.8.0
-simpervisor==0.4
-six==1.16.0
-sniffio==1.2.0
-stack-data==0.1.4
-terminado==0.13.1
-testpath==0.5.0
-tomli==2.0.0
-tornado==6.1
-traitlets==5.1.1
-txaio==21.2.1
-typing_extensions==4.0.1
-vpython==7.6.3
-wcwidth==0.2.5
-webencodings==0.5.1
-websocket-client==1.2.3
-widgetsnbextension==3.5.2
-yarl==1.7.2
-zipp==3.7.0
+email-validator==1.2.1
+environs==9.5.0
+fastapi==0.73.0
+firebase-admin==5.2.0
+h5py==2.10.0
+Keras==2.1.2
+mtcnn==0.1.1
+opencv-python==4.5.5.64
+pickle5
+Pillow==8.4.0
+pytz==2022.1
+pydantic==1.9.0
+pymongo==3.12.3
+python-dotenv==0.20.0
+python-decouple==3.6
+python-multipart==0.0.5
+requests==2.27.1
+scikit-learn==0.24.2
+scipy==1.5.4
+tensorflow==1.10.0
+uvicorn==0.16.0
+numpy
